fixed some spacing and text

--- a/src/style.css
+++ b/src/style.css
@@ -124,7 +124,7 @@ h3 .fas {
 }
 
 .content {
-  margin: 30px;
+  margin: 40px 100px;
 }
 
 .content-container p {
